# whisslin

./: .gitignore  Cargo.toml  bruh_deploy.sh  config.json  config.ron  config.toml  keyframes  keyframes.toml  spritesheet.sh
script/: entry.glsp
src/: config.rs  core.rs  main.rs  props.rs
src/combat/: aiming.rs  health.rs  mod.rs
src/component/: mod.rs
src/draw/: cam.rs  mod.rs
src/farm/: mod.rs
src/graphics/: colors.rs  fade.rs  hitbox_outlines.rs  images.rs  mod.rs  particle.rs  sprite_sheet.rs
src/graphics/particle/: death.rs  mod.rs
src/gui/: mod.rs
src/items/: mod.rs
src/phys/: aiming.rs  collision.rs  face_cursor.rs  mod.rs  movement.rs
src/state/: combat.rs  farming.rs  mod.rs
src/tilemap/: farmable.rs  mod.rs
src/world/: map.rs  mod.rs  player.rs
src/world/player/: aiming.rs  mod.rs  movement.rs
src/world/prefab/: comp.rs  instances.rs  mod.rs
src/world/prefab/instances/: mod.rs
src/world/prefab/instances/tracker/: mod.rs  overview_ui.rs  selector.rs
src/world/script/: default_behavior.glsp  mod.rs
