[package]
name = "game"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.'*']
opt-level = 3

[features]
confui = [ "notify" ]

[dependencies]
# windowing, rendering, input, etc.
miniquad = { version = "=0.3.0-alpha.11" }
macroquad = { git = "https://github.com/cedric-h/macroquad", branch = "char_events" }

# ui
egui = "=0.1.3"
emigui-miniquad = { git = "https://github.com/cedric-h/emigui-miniquad.git", rev = "ba00f7a445563d44790afc760f29d02b1a93ef5e", features = ["macroquad"] }

# ecs
hecs = "0.2.14"
l8r = { git = "https://github.com/cedric-h/l8r.git" }

# maffs
glam = {version = "0.8", features = ["scalar-math", "serde"] }
ncollide2d = "0.24.0"
na = { package = "nalgebra", version = "0.22.0", default-features = false, features = ["serde-serialize"] }

# storage
fxhash = "0.2.1"
ron = "0.6.2"
slotmap = { version = "0.4.0", features = ["serde", "unstable"] }
serde = { version = "1.0.115", features = [ "derive" ] }

# script
glsp = { version = "0.1.0", features = ["unsafe-internals", "compiler"] }
notify = { version = "4.0.15", optional = true }

[patch.crates-io]
glsp = { git = "https://github.com/cedric-h/glsp.git", branch = "min-max-by" }
